tests/slp29_for_in_source_bad.stderr
tests/slp29_for_in_source_bad.sl:4:11: error: SL2086: for-in source must support sequence iteration or iterator protocol
