tests/slp29_for_in_source_bad.sl
fn main() {
	var x i32 = 1
	for v in x {
		assert v == 1
	}
}
